Fix: fullscreen z-index

--- a/resources/css/plugin.css
+++ b/resources/css/plugin.css
@@ -11,7 +11,7 @@
   left: 0;
   bottom: 0;
   right: 0;
-  z-index: 51;
+  z-index: 40;
   display: flex;
   flex-direction: column;
   height: 100%;
